feature TUP-1628 : remove all internal use of Eclipse APIs for DI plugins
git-svn-id: http://talendforge.org/svn/tos/trunk@117578 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -119,6 +119,110 @@
                <triggerPoints></triggerPoints>
             </navigatorContent>
          </extension>
-         
+         <extension
+               point="org.eclipse.ui.activities">
+               <activity
+                     id="org.talend.rcp.branding.tos.bigdata.hidePerspectives"
+                     name="hidePerspectives">
+               </activity>
+               <activity
+                     id="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     name="hideViews">
+               </activity>
+
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hidePerspectives"
+                     pattern=".*/org.eclipse.jdt.ui.JavaPerspective">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hidePerspectives"
+                     pattern=".*/org.eclipse.team.ui.TeamSynchronizingPerspective">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hidePerspectives"
+                     pattern=".*/org.eclipse.ui.resourcePerspective">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hidePerspectives"
+                     pattern=".*/org.eclipse.pde.ui.PDEPerspective">
+               </activityPatternBinding>
+
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ant.ui.views.AntView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.pde.runtime.RegistryBrowser">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.pde.ui.DependenciesView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.pde.ui.PluginsView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.search.SearchResultView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.search.ui.views.SearchView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.team.sync.views.SynchronizeView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.team.ui.GenericHistoryView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.browser.view">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.cheatsheets.views.CheatSheetView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.texteditor.TemplatesView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.views.AllMarkersView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.views.BookmarkView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.team.sync.views.SynchronizeView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.views.ProblemView">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.views.PropertySheet">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.views.TaskList">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.ui.navigator.ProjectExplorer">
+               </activityPatternBinding>
+               <activityPatternBinding
+                     activityId="org.talend.rcp.branding.tos.bigdata.hideViews"
+                     pattern=".*/org.eclipse.wst.common.snippets.internal.ui.SnippetsView">
+               </activityPatternBinding>
+         </extension>
          
 </plugin>
