TDI-29010 fixed: Add kerberos capabilities for Hadoop 2.
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_5@117601 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -109,6 +109,7 @@ USE_KRB.NAME=Use kerberos authentication
 HIVE_PRINCIPAL.NAME=Hive principal
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
+RESOURCEMANAGER_PRINCIPAL.NAME=Resource manager principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
