--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -108,6 +108,7 @@ MAPRED_JOB_TRACKER.NAME=JobTracker Host
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
+RESOURCEMANAGER_PRINCIPAL.NAME=Resource manager principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
