--- a/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
@@ -77,3 +77,7 @@ CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
+
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
