Fix Bug TDI-29548 : When using HBase components with HDP, the job hangs https://jira.talendforge.org/browse/TDI-29548
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_5@118252 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -81,6 +81,9 @@ DEFINE_REGISTER_JAR.NAME=Define the jars to register for HBase
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
 
+SET_ZNODE_PARENT.NAME=Set zookeeper znode parent
+ZNODE_PARENT.NAME=
+
 REGISTER_JAR.NAME=Register jar for HBase
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
