--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -42,6 +42,9 @@ CONFIGURATION.NAME=Configuration
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
 
+SET_ZNODE_PARENT.NAME=Set zookeeper znode parent
+ZNODE_PARENT.NAME=
+
 HBASE_TABLE.NAME=Table name
 MAPPING.NAME=Mapping
 MAPPING.ITEM.COLUMN=Column
