--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -4,6 +4,10 @@ HELP=org.talend.help.tHBaseInput
 LONG_NAME=Reads an HBase table and extracts fields based on an SQL query
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
+
+SET_ZNODE_PARENT.NAME=Set zookeeper znode parent
+ZNODE_PARENT.NAME=
+
 PROPERTY.NAME=Property Type
 HBASE_PARAMETERS.NAME=Properties
 HBASE_PARAMETERS.ITEM.PROPERTY=Property
