--- a/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -4,6 +4,10 @@ USE_EXISTING_CONNECTION.NAME=Use an existing connection
 CONNECTION.NAME
 ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
+
+SET_ZNODE_PARENT.NAME=Set zookeeper znode parent
+ZNODE_PARENT.NAME=
+
 PROPERTY.NAME=Property Type
 HBASE_PARAMETERS.NAME=Properties
 HBASE_PARAMETERS.ITEM.PROPERTY=Property
