--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -78,6 +78,8 @@ COMPRESSION.ITEM.GZIP=GZIP
 COMPRESSION.ITEM.BZIP2=BZIP2
 COMPRESSION_GROUP.NAME=Compression
 
+COMPRESS_NOTE.NAME
+
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
 
 TYPEFILE.NAME=Type
