TDI-29010 fixed: add the ability to define other parameters required for kerberos.
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_5@118434 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -92,6 +92,7 @@ USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
 RESOURCEMANAGER_PRINCIPAL.NAME=Resource manager principal
+JOBHISTORY_PRINCIPAL.NAME=Job history principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
@@ -143,6 +144,8 @@ USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
 SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
 JOBHISTORY_ADDRESS.NAME=
+SET_STAGING_DIRECTORY.NAME=Set staging directory
+STAGING_DIRECTORY.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 MEMORY_PARAMETERS.NAME=Job memory parameters
