--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -109,6 +109,7 @@ USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
 RESOURCEMANAGER_PRINCIPAL.NAME=Resource manager principal
+JOBHISTORY_PRINCIPAL.NAME=Job history principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
@@ -150,6 +151,8 @@ MAPRED_JOB_REDUCE_MEMORY_MB.NAME = Reduce (in Mb)
 
 SET_SCHEDULER_ADDRESS.NAME=Set resourcemanager scheduler address
 RESOURCEMANAGER_SCHEDULER_ADDRESS.NAME=
+SET_STAGING_DIRECTORY.NAME=Set staging directory
+STAGING_DIRECTORY.NAME=
 SET_MEMORY.NAME=Set memory
 MAPREDUCE_MAP_MEMORY_MB.NAME= Map (in Mb)
 MAPREDUCE_REDUCE_MEMORY_MB.NAME= Reduce (in Mb)
