--- a/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -74,3 +74,7 @@ INCLUDSUBDIR.NAME=Includes subdirectories
 
 DISTRIBUTION.ITEM.PIVOTAL_HD=Pivotal HD
 DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
+
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
