Fix Bug TDI-29409 : The "Set jobhistory address" parameter needs to be added to more big data components than to tPigLoad only https://jira.talendforge.org/browse/TDI-29409
git-svn-id: http://talendforge.org/svn/tos/trunk@118597 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -143,6 +143,8 @@ HIVE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
+SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
+JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 USE_KRB.NAME=Use kerberos authentication
