--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -159,6 +159,8 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
+SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
+JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 MEMORY_PARAMETERS.NAME=Job memory parameters
