--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages.properties
@@ -143,6 +143,8 @@ HIVE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 SET_RESOURCE_MANAGER.NAME=Set Resource Manager
 RESOURCE_MANAGER.NAME=
+SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
+JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 USE_KRB.NAME=Use kerberos authentication
