--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -141,6 +141,8 @@ DB_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 DB_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 USE_YARN.NAME=Use Yarn
 RESOURCE_MANAGER.NAME=Resource Manager
+SET_JOBHISTORY_ADDRESS.NAME=Set jobhistory address
+JOBHISTORY_ADDRESS.NAME=
 CLASSPATH_SEPARATOR.NAME=Path separator in server
 
 CUSTOMCLASSNAME.NAME=Custom class name
