[TDI-29867] Upgrade version of Cassandra (2.0.0 to 2.0.8) Upgrade version of Neo4J(1.9 to 2.1.2) Upgrade version of MongoDB (2.5.X to 2.6.X)

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -24,6 +24,7 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
 DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X
 DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X
