--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -67,6 +67,7 @@ DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
 ROW_KEY_C_TYPE.NAME=Row key Cassandra type
 ROW_KEY_C_TYPE.ITEM.DEFAULT=Default
 ROW_KEY_C_TYPE.ITEM.COUNTERCOLUMNTYPE=CounterColumn
