TBD-893: Upgrade Sqoop components to support Sqoop 1.4.4 options.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages.properties
@@ -3,38 +3,75 @@ LONG_NAME=Imports an individual table from an RDBMS to HDFS
 EXTERNAL.NAME=Sqoop Import
 TEMPFILE.NAME=Temp data directory path
 
+COMMON_SQOOP_OPTIONS.NAME=Common arguments
+CONTROL_SQOOP_OPTIONS.NAME=Export control arguments
 CONNECTION.NAME=Connection
 TABLE.NAME=Table Name
 EXPORT_DIR.NAME=Export Dir
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
+PASSWORD_STORED_IN_FILE.NAME=The password is stored in a file
+PASSWORD_FILE.NAME=File path
+DRIVER_JAR.NAME=Driver JAR
+DRIVER_JAR.ITEM.JAR_NAME=Jar name
+
 PRINT_LOG.NAME=Print Log
 VERBOSE.NAME=Verbose
-DIRECT.NAME=Direct
+DIRECT.NAME=Use direct export fast path
 USE_MAPPERS.NAME=Specify Number of Mappers
 MAPPERS.NAME=
+
+CALL_PROC_STOC.NAME=Call a stored procedure
+PROC_STOC.NAME=
+USE_BATCH_MODE.NAME=Use batch mode
+CLEAR_STAGING_TABLE.NAME=Clear staging table
+DEFINE_STAGING_TABLE.NAME=Define a staging table
+STAGING_TABLE.NAME=
+
 MYSQL_DELIMITERS.NAME=Use MySQL default Delimiters
 
+USE_COLUMN_FOR_UPDATE.NAME=Use column for update
+COLUMN_FOR_UPDATE.NAME=
+COLUMN_FOR_UPDATE.ITEM.COLUMN_NAME=Column
+
+DEFINE_UPDATE_MODE.NAME=Specify how updates are performed when new rows are found with non-matching keys in database
+UPDATE_MODE.NAME=
+UPDATE_MODE.ITEM.updateonly=Update only
+UPDATE_MODE.ITEM.allowinsert=Allow insert
+
+TYPE_MAPPING.NAME=Type mapping
+DEFINE_JAVA_MAPPING.NAME=Define Java mapping
+JAVA_TYPE_MAPPING.NAME=Java mapping
+JAVA_TYPE_MAPPING.ITEM.COLUMN_NAME=Column name
+JAVA_TYPE_MAPPING.ITEM.JAVA_TYPE=Java type
+
 ADDITIONAL.NAME=Additional Arguments
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT=Argument
-ADDITIONAL.ITEM.ADDITIONAL_VALUE=Value
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_ARGUMENTS.NAME=
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT=Argument
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_VALUE=Value
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--connection-manager=--connection-manager
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-mapred-home=--hadoop-mapred-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-null-non-string=--input-null-non-string
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-null-string=--input-null-string
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+
+ADDITIONAL_COMMANDLINE_ARGUMENTS.NAME=
 
 OUTPUT_MESSAGE.NAME=Output Message
 
