--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -3,10 +3,17 @@ LONG_NAME=Imports an individual table from an RDBMS to HDFS
 EXTERNAL.NAME=Sqoop Import
 TEMPFILE.NAME=Temp data directory path
 
+COMMON_SQOOP_OPTIONS.NAME=Common arguments
+
 CONNECTION.NAME=Connection
 TABLE.NAME=Table Name
 USERNAME.NAME=Username
+PASSWORD_STORED_IN_FILE.NAME=The password is stored in a file
+PASSWORD_FILE.NAME=File path
 PASSWORD.NAME=Password
+DRIVER_JAR.NAME=Driver JAR
+DRIVER_JAR.ITEM.JAR_NAME=Jar name
+
 USE_COLUMNS.NAME=Specify Columns
 COLUMNS.NAME=Columns
 COLUMNS.ITEM.COLUMN=Column
@@ -17,76 +24,94 @@ VERBOSE.NAME=Verbose
 USE_MAPPERS.NAME=Specify Number of Mappers
 MAPPERS.NAME=
 USE_TARGET.NAME=Specify Target Dir
-TARGET.NAME=Target directory
-APPEND.NAME=Append
-DIRECT.NAME=Direct
-COMPRESS.NAME=Compress
+TARGET.NAME=
+APPEND.NAME=Append data to an existing dataset in HDFS
+
+DIRECT.NAME=Use direct import fast path
+DEFINE_DIRECT_SPLIT_SIZE.NAME=Split the input stream every N bytes
+DIRECT_SPLIT_SIZE.NAME=
+
+COMPRESS.NAME=Enable compression
+DEFINE_HADOOP_CODEC.NAME=Use Hadoop codec
+HADOOP_CODEC.NAME=
+
+DELETE_TARGET_DIR.NAME=Delete target directory
 FILE_FORMAT.NAME=File Format
-FILE_FORMAT.ITEM.textfile=textfile
-FILE_FORMAT.ITEM.sequencefile=sequencefile
+FILE_FORMAT.ITEM.textfile=Text file
+FILE_FORMAT.ITEM.sequencefile=Sequence file
+FILE_FORMAT.ITEM.avrofile=Avro file
 MYSQL_DELIMITERS.NAME=Use MySQL default Delimiters
 
 ADDITIONAL.NAME=Additional Arguments
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT=Argument
-ADDITIONAL.ITEM.ADDITIONAL_VALUE=Value
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_ARGUMENTS.NAME=
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT=Argument
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_VALUE=Value
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--boundary-query=--boundary-query
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--column-family=--column-family
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--connection-manager=--connection-manager
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--create-hcatalog-table=--create-hcatalog-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--create-hive-table=--create-hive-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fetch-size=--fetch-size
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-mapred-home=--hadoop-mapred-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hbase-create-table=--hbase-create-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hbase-row-key=--hbase-row-key
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hbase-table=--hbase-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hcatalog-database=--hcatalog-database
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hcatalog-home=--hcatalog-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hcatalog-storage-stanza=--hcatalog-storage-stanza
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hcatalog-table=--hcatalog-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-delims-replacement=--hive-delims-replacement
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-drop-import-delims=--hive-drop-import-delims
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-partition-key=--hive-partition-key
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-partition-value=--hive-partition-value
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--null-non-string=--null-non-string
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--null-string=--null-string
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
+
+ADDITIONAL_COMMANDLINE_ARGUMENTS.NAME=
 
 ADDITIONAL_JAVA.NAME=Additional Arguments
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT=Argument
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=Value
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+
+TYPE_MAPPING.NAME=Type mapping
+DEFINE_JAVA_MAPPING.NAME=Define Java mapping
+JAVA_TYPE_MAPPING.NAME=Java mapping
+JAVA_TYPE_MAPPING.ITEM.COLUMN_NAME=Column name
+JAVA_TYPE_MAPPING.ITEM.JAVA_TYPE=Java type
+
+DEFINE_HIVE_MAPPING.NAME=Define Hive mapping
+HIVE_TYPE_MAPPING.NAME=Hive mapping
+HIVE_TYPE_MAPPING.ITEM.COLUMN_NAME=Column name
+HIVE_TYPE_MAPPING.ITEM.HIVE_TYPE=Hive type
 
 OUTPUT_MESSAGE.NAME=Output Message
 
-QUERY_MODE.NAME=Query
+CONTROL_SQOOP_OPTIONS.NAME=Import control arguments
 
 USE_QUERY.NAME=Use query
 QUERY.NAME=Query
