--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -3,78 +3,76 @@ LONG_NAME=Imports individual tables from an RDBMS to HDFS
 EXTERNAL.NAME=Sqoop Import All Tables
 TEMPFILE.NAME=Temp data directory path
 
+COMMON_SQOOP_OPTIONS.NAME=Common arguments
+
 CONNECTION.NAME=Connection
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
+PASSWORD_STORED_IN_FILE.NAME=The password is stored in a file
+PASSWORD_FILE.NAME=File path
+DRIVER_JAR.NAME=Driver JAR
+DRIVER_JAR.ITEM.JAR_NAME=Jar name
+
 PRINT_LOG.NAME=Print Log
 VERBOSE.NAME=Verbose
 USE_MAPPERS.NAME=Specify Number of Mappers
 MAPPERS.NAME=
-DIRECT.NAME=Direct
-COMPRESS.NAME=Compress
+
+DIRECT.NAME=Use direct import fast path
+DEFINE_DIRECT_SPLIT_SIZE.NAME=Split the input stream every N bytes
+DIRECT_SPLIT_SIZE.NAME=
+
+COMPRESS.NAME=Enable compression
+DEFINE_HADOOP_CODEC.NAME=Use Hadoop codec
+HADOOP_CODEC.NAME=
+
 FILE_FORMAT.NAME=File Format
 FILE_FORMAT.ITEM.textfile=textfile
 FILE_FORMAT.ITEM.sequencefile=sequencefile
+FILE_FORMAT.ITEM.avrofile=Avro file
 MYSQL_DELIMITERS.NAME=Use MySQL default Delimiters
 
+EXCLUDE_TABLE.NAME=Exclude table
+TABLE_TO_EXCLUDE.NAME=
+TABLE_TO_EXCLUDE.ITEM.TABLE_NAME=Table
+
 ADDITIONAL.NAME=Additional Arguments
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT=Argument
-ADDITIONAL.ITEM.ADDITIONAL_VALUE=Value
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
-ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_ARGUMENTS.NAME=
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT=Argument
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_VALUE=Value
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--connection-manager=--connection-manager
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--create-hive-table=--create-hive-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-delims-replacement=--hive-delims-replacement
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-drop-import-delims=--hive-drop-import-delims
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-partition-key=--hive-partition-key
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-partition-value=--hive-partition-value
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
 
 OUTPUT_MESSAGE.NAME=Output Message
 
-
-ADDITIONAL_JAVA.NAME=Additional Arguments
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT=Argument
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=Value
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--warehouse-dir=--warehouse-dir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--enclosed-by=--enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--escaped-by=--escaped-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--fields-terminated-by=--fields-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--lines-terminated-by=--lines-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--optionally-enclosed-by=--optionally-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-enclosed-by=--input-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-escaped-by=--input-escaped-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-fields-terminated-by=--input-fields-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-lines-terminated-by=--input-lines-terminated-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--input-optionally-enclosed-by=--input-optionally-enclosed-by
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-home=--hive-home
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-import=--hive-import
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-overwrite=--hive-overwrite
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hive-table=--hive-table
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--bindir=--bindir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
-ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+ADDITIONAL_COMMANDLINE_ARGUMENTS.NAME=
 
 OUTPUT_MESSAGE.NAME=Output Message
 
@@ -91,6 +89,14 @@ USE_COMMANDLINE.NAME=Use Commandline
 USE_JAVAAPI.NAME=Use Java API
 
 VERSION.NAME=Version
+
+TYPE_MAPPING.NAME=Type mapping
+DEFINE_HIVE_MAPPING.NAME=Define Hive mapping
+HIVE_TYPE_MAPPING.NAME=Hive mapping
+HIVE_TYPE_MAPPING.ITEM.COLUMN_NAME=Column name
+HIVE_TYPE_MAPPING.ITEM.HIVE_TYPE=Hive type
+
+CONTROL_SQOOP_OPTIONS.NAME=Import control arguments
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
