--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -16,6 +16,9 @@ CONNECTION.NAME=Connection
 TABLE.NAME=Table name
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
+DRIVER_JAR.NAME=Driver JAR
+DRIVER_JAR.ITEM.JAR_NAME=Jar name
+
 PRINT_LOG.NAME=Print logs
 VERBOSE.NAME=Verbose
 
